--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "openscript",
-  "workspaces": ["plugins/gatsby-plugin-i18n-l10n"],
+  "workspaces": [
+    "plugins/gatsby-plugin-i18n-l10n"
+  ],
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -26,6 +28,7 @@
     "graphql": "15.6.1",
     "interweave": "^12.9.0",
     "limax": "^3.0.0",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
