Add contact to topbar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["./src/**/*", "./.gatsby/**/*", "./*.ts", "./plugins/**/*"],
+  "files": ["./src/types.d.ts"],
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
