--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,13 +2,9 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.194.0/containers/typescript-node
 {
   "name": "Gatsby Starter Dogmatism",
-  "build": {
-    "dockerfile": "Dockerfile",
-    // Update 'VARIANT' to pick a Node version: 12, 14, 16
-    "args": {
-      "VARIANT": "16"
-    }
-  },
+  "service": "openscript-ch",
+  "dockerComposeFile": "docker-compose.yml",
+  "workspaceFolder": "/workspace",
   // Set *default* container specific settings.json values on container create.
   "settings": {},
   // Add the IDs of extensions you want installed when the container is created.
@@ -26,7 +22,9 @@
     "eliostruyf.vscode-front-matter"
   ],
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8000]
+  "forwardPorts": [
+    8000
+  ]
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "yarn install",
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
