--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,21 @@
       "args": ["build"],
       "runtimeArgs": ["--nolazy"],
       "console": "integratedTerminal"
+    },
+    {
+      "name": "Debug Jest gatsby-plugin-i18n-l10n Tests",
+      "type": "node",
+      "request": "launch",
+      "runtimeArgs": [
+        "--inspect-brk",
+        "${workspaceRoot}/node_modules/.bin/jest",
+        "--runInBand",
+        "--config",
+        "${workspaceRoot}/plugins/gatsby-plugin-i18n-l10n/jest.config.js"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "port": 9229
     }
   ]
 }
