introduce slider autoplay

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@svgr/webpack": "^6.1.2",
+    "embla-carousel-autoplay": "^6.0.2",
     "embla-carousel-react": "^6.0.2",
     "gatsby": "^4.4.0",
     "gatsby-plugin-emotion": "^7.4.0",
