--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^6.0.2",
     "gatsby": "^4.5.2",
     "gatsby-plugin-emotion": "^7.5.0",
+    "gatsby-plugin-google-gtag": "^4.5.0",
     "gatsby-plugin-image": "^2.5.1",
     "gatsby-plugin-manifest": "^4.5.1",
     "gatsby-plugin-offline": "^5.5.1",
