--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-dogmatism",
-  "homepage": "https://github.com/openscript/gatsby-starter-dogmatism",
+  "name": "openscript.ch",
+  "homepage": "https://github.com/openscript-ch/openscript.ch",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@svgr/webpack": "^6.1.2",
+    "dotenv": "^11.0.0",
     "embla-carousel-autoplay": "^6.0.2",
     "embla-carousel-react": "^6.0.2",
     "gatsby": "^4.5.2",
@@ -49,8 +50,18 @@
     "@graphql-codegen/typescript-operations": "^2.2.2",
     "@types/node": "^17.0.5",
     "@types/react-helmet": "^6.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
@@ -64,6 +75,7 @@
     "build:types": "graphql-codegen --config codegen.yml",
     "build:with-prefix": "gatsby-ts build --prefix-paths",
     "check:types": "tsc --noEmit",
+    "check:format": "eslint . --max-warnings 0",
     "check:watch-types": "tsc --noEmit --watch",
     "develop": "gatsby-ts develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
