--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
     "@emotion/styled": "^11.6.0",
     "@svgr/webpack": "^6.1.2",
     "dotenv": "^14.3.0",
+    "embla-carousel": "^6.1.1",
     "embla-carousel-autoplay": "^6.1.1",
     "embla-carousel-react": "^6.1.1",
-    "gatsby": "^4.5.5",
-    "gatsby-plugin-emotion": "^7.5.0",
-    "gatsby-plugin-google-gtag": "^4.5.0",
-    "gatsby-plugin-image": "^2.5.2",
-    "gatsby-plugin-manifest": "^4.5.2",
-    "gatsby-plugin-offline": "^5.5.2",
-    "gatsby-plugin-react-helmet": "^5.5.0",
+    "gatsby": "^4.6.0",
+    "gatsby-plugin-emotion": "^7.6.0",
+    "gatsby-plugin-google-gtag": "^4.6.0",
+    "gatsby-plugin-i18n-l10n": "^4.4.6",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-offline": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.5.2",
-    "gatsby-plugin-sitemap": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-remark-autolink-headers": "^5.5.0",
-    "gatsby-remark-copy-linked-files": "^5.5.0",
-    "gatsby-remark-images": "^6.5.2",
-    "gatsby-source-filesystem": "^4.5.2",
-    "gatsby-transformer-remark": "^5.5.2",
-    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-remark-autolink-headers": "^5.6.0",
+    "gatsby-remark-copy-linked-files": "^5.6.0",
+    "gatsby-remark-images": "^6.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-remark": "^5.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "gatsby-ts": "^1.0.0-rc.1",
     "graphql": "15.6.1",
     "interweave": "^12.9.0",
