--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: Continuous Integration
 
 on:
   pull_request:
-  branches:
-    - develop
+  push:
+    branches:
+      - develop
 
 jobs:
   check:
