--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args:
         VARIANT: 16-bullseye
     volumes:
-      - devdata:/workspace
+      - ..:/workspace
     command: sleep infinity
 
 volumes:
