chore(deps): replace gatsby-ts with native typescript integration

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
-    "gatsby-ts": "^1.0.0-rc.1",
     "graphql": "16.3.0",
     "interweave": "^13.0.0",
     "limax": "^3.0.0",
@@ -70,17 +69,17 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby-ts build",
+    "build": "gatsby build",
     "build:types": "graphql-codegen --config codegen.yml",
-    "build:with-prefix": "gatsby-ts build --prefix-paths",
+    "build:with-prefix": "gatsby build --prefix-paths",
     "check:types": "tsc --noEmit",
     "check:format": "eslint . --max-warnings 0",
     "check:watch-types": "tsc --noEmit --watch",
-    "develop": "gatsby-ts develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn run develop",
-    "serve": "gatsby-ts serve",
-    "clean": "gatsby-ts clean",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
