--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "i18n-ally.keystyle": "flat",
   "i18n-ally.sortKeys": true,
   "i18n-ally.sourceLanguage": "en-US",
-  "i18n-ally.displayLanguage": "en-US"
+  "i18n-ally.displayLanguage": "en-US",
+  "cSpell.words": ["Europastrasse", "Glattbrugg", "openscript"]
 }
