--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
     "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-german",
     "esbenp.prettier-vscode",
     "mikestead.dotenv",
     "eamodio.gitlens",
