chore: adapt theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
   "i18n-ally.sortKeys": true,
   "i18n-ally.sourceLanguage": "de-CH",
   "i18n-ally.displayLanguage": "de-CH",
-  "cSpell.words": ["Europastrasse", "Glattbrugg", "openscript"]
+  "cSpell.words": ["Europastrasse", "gatsby", "Glattbrugg", "openscript"]
 }
