--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "2.8.0",
+    "svg-sprite": "^2.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
   },
@@ -60,6 +61,7 @@
   "scripts": {
     "build": "gatsby build",
     "build:types": "graphql-codegen --config codegen.yml",
+    "build:sprite": "svg-sprite -s --ss symbols.svg --symbol-dest . -l verbose -D static src/images/*.svg",
     "build:with-prefix": "gatsby build --prefix-paths",
     "check:format": "eslint . --max-warnings 0",
     "check:types": "tsc --noEmit",
@@ -69,7 +71,9 @@
     "start": "yarn run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "prestart": "yarn run build:sprite",
+    "prebuild": "yarn run build:sprite"
   },
   "repository": {
     "type": "git",
