--- a/package.json
+++ b/package.json
@@ -24,21 +24,22 @@
     "gatsby-remark-images": "7.2.0",
     "gatsby-source-filesystem": "5.2.0",
     "gatsby-transformer-sharp": "5.2.0",
+    "interweave": "^13.0.0",
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intl": "6.2.1"
+    "react-intl": "6.2.4"
   },
   "devDependencies": {
     "@babel/core": "7.20.5",
-    "@graphql-codegen/cli": "2.14.1",
-    "@graphql-codegen/typescript": "2.8.2",
-    "@graphql-codegen/typescript-operations": "2.5.7",
-    "@types/node": "18.11.9",
+    "@graphql-codegen/cli": "2.15.0",
+    "@graphql-codegen/typescript": "2.8.3",
+    "@graphql-codegen/typescript-operations": "2.5.8",
+    "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "5.45.0",
+    "@typescript-eslint/parser": "5.45.0",
     "babel-eslint": "10.1.0",
     "eslint": "8.28.0",
     "eslint-config-airbnb": "19.0.4",
