--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intl": "6.2.4"
+    "react-intl": "6.2.4",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.20.5",
