feat: add svg sprites

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "scripts": {
     "build": "gatsby build",
     "build:types": "graphql-codegen --config codegen.yml",
-    "build:sprite": "svg-sprite -s --ss symbols.svg --symbol-dest . -l verbose -D static src/images/*.svg",
+    "build:sprite": "svg-sprite -S --Ss sprite.svg --stack-dest . --Sx --stack-example-template src/images/sprite.json.mustache --stack-example-dest sprite.json -l verbose -D static src/images/*.svg",
     "build:with-prefix": "gatsby build --prefix-paths",
     "check:format": "eslint . --max-warnings 0",
     "check:types": "tsc --noEmit",
