--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@emotion/styled": "11.10.5",
     "@mdx-js/mdx": "2.2.1",
     "@mdx-js/react": "2.2.1",
+    "embla-carousel-autoplay": "^7.0.5",
+    "embla-carousel-react": "^7.0.5",
     "gatsby": "5.3.2",
     "gatsby-plugin-catch-links": "5.3.0",
     "gatsby-plugin-emotion": "8.3.0",
