--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-manifest": "5.3.1",
     "gatsby-plugin-mdx": "5.3.1",
     "gatsby-plugin-offline": "6.3.1",
+    "gatsby-plugin-page-creator": "^5.3.1",
     "gatsby-plugin-sharp": "5.3.2",
     "gatsby-remark-autolink-headers": "6.3.1",
     "gatsby-remark-copy-linked-files": "6.3.0",
@@ -38,8 +39,8 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
     "babel-eslint": "10.1.0",
     "eslint": "8.30.0",
     "eslint-config-airbnb": "19.0.4",
