--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,11 +25,13 @@
     "graphql.vscode-graphql",
     "lokalise.i18n-ally",
     "eliostruyf.vscode-front-matter",
-    "silvenon.mdx",
+    "unifiedjs.vscode-mdx",
     "GraphQL.vscode-graphql"
   ],
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8000]
+  "forwardPorts": [
+    8000
+  ]
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "yarn install",
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
