--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "6.2.5",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "type-fest": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.20.5",
