chore: add frontmatter to words dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
   "i18n-ally.displayLanguage": "de-CH",
   "cSpell.words": [
     "Europastrasse",
+    "frontmatter",
     "gatsby",
     "Glattbrugg",
     "openscript"
