--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/mdx": "^2.0.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -58,6 +60,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "2.8.2",
     "svg-sprite": "^2.0.2",
     "ts-node": "10.9.1",
