feat: add team page summary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,11 +29,15 @@
   "i18n-ally.sourceLanguage": "de-CH",
   "i18n-ally.displayLanguage": "de-CH",
   "cSpell.words": [
+    "Bühler",
     "Europastrasse",
     "frontmatter",
     "gatsby",
     "Glattbrugg",
-    "openscript"
+    "Micael",
+    "openscript",
+    "Stampa",
+    "Stäubli"
   ],
   "cSpell.language": "de-de, en"
 }
