--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "interweave": "^13.0.0",
     "polished": "^4.2.2",
     "react": "18.2.0",
+    "react-alternating-timeline": "^2.0.0",
     "react-dom": "18.2.0",
     "react-intl": "6.4.2",
     "react-use": "^17.4.0",
