--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
