--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@fontsource/ibm-plex-mono": "^5.2.6",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/rajdhani": "^5.2.6",
+    "@nanostores/i18n": "^1.2.2",
     "astro": "^5.13.5",
     "astro-loader-i18n": "^0.7.8",
+    "astro-nanostores-i18n": "^0.1.5",
     "limax": "^4.1.0",
     "pagefind": "^1.3.0",
     "rehype-autolink-headings": "^7.1.0",
