--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
-    "@fontsource/ibm-plex-mono": "^5.2.6",
-    "@fontsource/poppins": "^5.2.6",
-    "@fontsource/rajdhani": "^5.2.6",
+    "@fontsource/fira-mono": "^5.2.6",
+    "@fontsource/pt-sans": "^5.2.6",
     "@nanostores/i18n": "^1.2.2",
     "astro": "^5.13.5",
     "astro-loader-i18n": "^0.7.8",
