--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -3,14 +3,14 @@ name: Check
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     types:
       - opened
       - reopened
       - synchronize
     branches:
-      - main
+      - master
 
   workflow_dispatch:
 
