--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,11 +5,11 @@ on:
     types:
       - closed
     branches:
-      - main
+      - master
 
 jobs:
   publish:
-    if: github.event.pull_request.merged == true && github.head_ref == 'changeset-release/main'
+    if: github.event.pull_request.merged == true && github.head_ref == 'changeset-release/master'
     name: Publish
     runs-on: ubuntu-latest
     steps:
