--- a/src/content/formation/founding.yaml
+++ b/src/content/formation/founding.yaml
@@ -1,11 +1,11 @@
 items:
   de:
-    - title: Lorem
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    - title: Lorem
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    - title: Web-Domain
+      text: Bereits am  24. April 2007 wurde die Domain openscript.ch registriert.
+    - title: Handelsregistereintrag
+      text: Seit dem 23. Januar 2020 sind wir im Handelsregister eingetragen.
   en:
-    - title: Lorem
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    - title: Lorem
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    - title: Web Domain
+      text: The domain openscript.ch was already registered on April 24, 2007.
+    - title: Commercial Register Entry
+      text: We have been registered in the commercial register since January 23, 2020.
