--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: Publish
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - closed
     branches:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   publish:
-    if: github.event.pull_request.merged == true && github.head_ref == 'changeset-release/master'
+    if: github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'changeset-release/master'
     name: Publish
     runs-on: ubuntu-latest
     steps:
